# personality-prediction

./: .env.example  README_API.md  api.py  config.py  interaction_analyzer.py  pyproject.toml
explogs/: expdata.csv
pkl_data/finetune_mlp_lm/: MLP_LM_AGR.h5  MLP_LM_CON.h5  MLP_LM_EXT.h5  MLP_LM_NEU.h5  MLP_LM_OPN.h5
