[tool.poetry]
name = "personality-prediction"
version = "0.1.0"
description = "Personality prediction from text using BERT and fine-tuned models with advanced interaction analysis"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
transformers = "^4.5.0"
numpy = "^1.19.5"
tensorflow = "^2.5.0"
joblib = "^1.0.1"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"
textblob = "^0.15.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
